# Toff

./: CMakeLists.txt  LICENSE  README.md  error_code.h  http_server.cpp  http_server.h
libs/: CMakeLists.txt  CMakeLists.txt~
libs/http_types/: http_request.h  http_request.h~  http_response.h~  http_rest_api_request.cpp~  http_rest_api_request.h~  http_rest_api_response.cpp~  http_rest_api_response.h~
src/: CMakeLists.txt  acceptor.cpp  acceptor.h  error_code.h  hello_world.cpp  http_server.cpp  http_server.h  request_handler.cpp  request_handler.h  simple_http_server.cpp  simple_http_server.h  simple_server.cpp
